--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
     <title>FasterUI</title>
 </head>
 
@@ -98,8 +102,12 @@
                     <h2>News</h2>
                 </div>
                 <div class="news-pagination">
-                    <div class="swiper-button-next news-next"></div>
-                    <div class="swiper-button-prev news-prev"></div>
+                     <div class="swiper-button-next news-prev">
+                        <i class="ri-arrow-left-wide-line"></i>
+                    </div>
+                    <div class="swiper-button-prev news-next">
+                        <i class="ri-arrow-right-wide-line"></i>
+                    </div>
                 </div>
             </div>
             <div class="swiper newsSwiper">
@@ -116,31 +124,6 @@
                                 <a href="#">learn more</a>
                             </div>
                         </div>
-
-                        <!-- <div class="card">
-                            <div class="card-img">
-                                <img src="./assets/img/Rectangle 3802.png" alt="">
-                            </div>
-                            <div class="card-content">
-                                <h2>Giveaway</h2>
-                                <p>Gear up for victory! Join FasterUI Esports giveaway and enter to win a premium gaming
-                                    keyboard.</p>
-                                <a href="#">learn more</a>
-                            </div>
-                        </div>
-
-                        <div class="card">
-                            <div class="card-img">
-                                <img src="./assets/img/Rectangle 3803.png" alt="">
-                            </div>
-                            <div class="card-content">
-                                <h2>Giveaway</h2>
-                                <p>Gear up for victory! Join FasterUI Esports giveaway and enter to win a premium gaming
-                                    keyboard.</p>
-                                <a href="#">learn more</a>
-                            </div>
-                        </div> -->
-
                     </div>
 
                     <div class="swiper-slide">
