--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                     <a href="#"><img src="./assets/img/Logo.png" alt=""></a>
                 </div>
                 <div class="middle">
-                    <ul>
-                        <li><a href="#">home</a></li>
-                        <li><a href="#">news</a></li>
-                        <li><a href="#">ourmission</a></li>
-                        <li><a href="#">matches</a></li>
-                        <li><a href="#">social</a></li>
+                    <ul class="nav-list">
+                        <li class="nav-item"><a href="#" class="nav-link active">home</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">news</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">ourmission</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">matches</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">social</a></li>
                     </ul>
                 </div>
                 <div class="right">
@@ -220,6 +220,97 @@
         </div>
     </section>
 
+    <section class="next">
+        <div class="container">
+            <div class="row">
+                <div class="left">
+                    <h4>Starting - Mar 23, 19:00</h4>
+                    <h2>next <br> match</h2>
+                    <p>FasterUI vs GAMERS</p>
+                    <p class="red">ThunderClash Showdown 2024</p>
+                </div>
+                <div class="right">
+                    <div class="rleft">
+                        <img src="./assets/img/Subtract2.png" alt="">
+                    </div>
+                    <div class="rmiddle">
+                        <h2>VS</h2>
+                    </div>
+                    <div class="rright">
+                        <img src="./assets/img/Group 27230.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <h2>previous 3 matches</h2>
+
+            <div class="row2">
+                <div class="one">
+                    <h2>l</h2>
+                </div>
+                <div class="two">
+                    <p>Ended - Feb 14, 18:43</p>
+                </div>
+                <div class="three">
+                    <p>ShadowStrike Invitational</p>
+                </div>
+                <div class="four">
+                    <img src="./assets/img/Group 27221.png" alt="">
+                </div>
+                <div class="five">
+                    <p>0 - 2</p>
+                </div>
+                <div class="six">
+                    <h3>paperplane</h3>
+                    <img src="./assets/img/Group 27232.png" alt="">
+                </div>
+            </div>
+
+            <div class="row3">
+                <div class="one">
+                    <h2>l</h2>
+                </div>
+                <div class="two">
+                    <p>Ended - Feb 14, 18:43</p>
+                </div>
+                <div class="three">
+                    <p>ShadowStrike Invitational</p>
+                </div>
+                <div class="four">
+                    <img src="./assets/img/Group 27221.png" alt="">
+                </div>
+                <div class="five">
+                    <p>0 - 2</p>
+                </div>
+                <div class="six">
+                    <h3>paperplane</h3>
+                    <img src="./assets/img/Group 27232.png" alt="">
+                </div>
+            </div>
+
+            <div class="row3">
+                <div class="one">
+                    <h2>l</h2>
+                </div>
+                <div class="two">
+                    <p>Ended - Feb 14, 18:43</p>
+                </div>
+                <div class="three">
+                    <p>ShadowStrike Invitational</p>
+                </div>
+                <div class="four">
+                    <img src="./assets/img/Group 27221.png" alt="">
+                </div>
+                <div class="five">
+                    <p>0 - 2</p>
+                </div>
+                <div class="six">
+                    <h3>paperplane</h3>
+                    <img src="./assets/img/Group 27232.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section class="rated">
         <div class="container">
