--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </div>
     </section>
 
-    <section class="next">
+    <!-- <section class="next">
         <div class="container">
             <div class="row">
                 <div class="left">
@@ -268,49 +268,49 @@
 
             <div class="row3">
                 <div class="one">
-                    <h2>l</h2>
+                    <h2>w</h2>
                 </div>
                 <div class="two">
-                    <p>Ended - Feb 14, 18:43</p>
+                    <p>Ended - Feb 13, 17:14</p>
                 </div>
                 <div class="three">
                     <p>ShadowStrike Invitational</p>
                 </div>
                 <div class="four">
-                    <img src="./assets/img/Group 27221.png" alt="">
+                    <img src="./assets/img/palm-of-hand 1.png" alt="">
+                    <h3>DENIED</h3>
                 </div>
                 <div class="five">
-                    <p>0 - 2</p>
+                    <p>0 - 1</p>
                 </div>
                 <div class="six">
-                    <h3>paperplane</h3>
-                    <img src="./assets/img/Group 27232.png" alt="">
+                    <img src="./assets/img/Group 27224.png" alt="">
                 </div>
             </div>
 
             <div class="row3">
                 <div class="one">
-                    <h2>l</h2>
+                    <h2>w</h2>
                 </div>
                 <div class="two">
-                    <p>Ended - Feb 14, 18:43</p>
+                    <p>Ended - Feb 13, 13:14</p>
                 </div>
                 <div class="three">
                     <p>ShadowStrike Invitational</p>
                 </div>
                 <div class="four">
-                    <img src="./assets/img/Group 27221.png" alt="">
+                    <img src="./assets/img/Group 27225.png" alt="">
                 </div>
                 <div class="five">
-                    <p>0 - 2</p>
+                    <p>2 - 0</p>
                 </div>
                 <div class="six">
-                    <h3>paperplane</h3>
-                    <img src="./assets/img/Group 27232.png" alt="">
+                    <h3>cookies</h3>
+                    <img src="./assets/img/Group 27231.png" alt="">
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="rated">
         <div class="container">
