--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <li class="nav-item"><a href="#" class="nav-link">news</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">ourmission</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">matches</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">social</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">socials</a></li>
                     </ul>
                 </div>
                 <div class="right">
@@ -121,13 +121,15 @@
                                 <h2>Giveaway</h2>
                                 <p>Gear up for victory! Join FasterUI Esports giveaway and enter to win a premium gaming
                                     keyboard.</p>
-                                <a href="#">learn more</a>
+                                    <div class="learn">
+                                        <a href="#">learn more</a>
+                                        <img src="./assets/img/Vector 1.png" alt="">
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="swiper-slide">
-
                         <div class="card">
                             <div class="card-img">
                                 <img src="./assets/img/Rectangle 3802.png" alt="">
@@ -136,14 +138,15 @@
                                 <h2>Giveaway</h2>
                                 <p>Gear up for victory! Join FasterUI Esports giveaway and enter to win a premium gaming
                                     keyboard.</p>
-                                <a href="#">learn more</a>
+                                    <div class="learn">
+                                        <a href="#">learn more</a>
+                                        <img src="./assets/img/Vector 1.png" alt="">
+                                </div>
                             </div>
                         </div>
-
                     </div>
 
                     <div class="swiper-slide">
-
                         <div class="card">
                             <div class="card-img">
                                 <img src="./assets/img/Rectangle 3803.png" alt="">
@@ -152,10 +155,12 @@
                                 <h2>Giveaway</h2>
                                 <p>Gear up for victory! Join FasterUI Esports giveaway and enter to win a premium gaming
                                     keyboard.</p>
-                                <a href="#">learn more</a>
+                                    <div class="learn">
+                                        <a href="#">learn more</a>
+                                        <img src="./assets/img/Vector 1.png" alt="">
+                                </div>
                             </div>
                         </div>
-
                     </div>
 
                     <div class="swiper-slide">
@@ -167,11 +172,30 @@
                                 <h2>Giveaway</h2>
                                 <p>Gear up for victory! Join FasterUI Esports giveaway and enter to win a premium gaming
                                     keyboard.</p>
-                                <a href="#">learn more</a>
+                                    <div class="learn">
+                                        <a href="#">learn more</a>
+                                        <img src="./assets/img/Vector 1.png" alt="">
+                                </div>
                             </div>
                         </div>
                     </div>
 
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="./assets/img/Rectangle 3802.png" alt="">
+                            </div>
+                            <div class="card-content">
+                                <h2>Giveaway</h2>
+                                <p>Gear up for victory! Join FasterUI Esports giveaway and enter to win a premium gaming
+                                    keyboard.</p>
+                                <div class="learn">
+                                    <a href="#">learn more</a>
+                                    <img src="./assets/img/Vector 1.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -220,33 +244,34 @@
         </div>
     </section>
 
-    <!-- <section class="next">
+    <section class="next">
         <div class="container">
             <div class="row">
                 <div class="left">
-                    <h4>Starting - Mar 23, 19:00</h4>
-                    <h2>next <br> match</h2>
-                    <p>FasterUI vs GAMERS</p>
+                    <p>Starting - Mar 23, 19:00</p>
+                    <h2>next match</h2>
+                    <p class="vs">FasterUI vs GAMERS</p>
                     <p class="red">ThunderClash Showdown 2024</p>
                 </div>
                 <div class="right">
-                    <div class="rleft">
-                        <img src="./assets/img/Subtract2.png" alt="">
-                    </div>
-                    <div class="rmiddle">
-                        <h2>VS</h2>
-                    </div>
-                    <div class="rright">
-                        <img src="./assets/img/Group 27230.png" alt="">
+                    <div class="row">
+                        <div class="left-r">
+                            <img src="./assets/img/Subtract2.png" alt="">
+                        </div>
+                        <div class="middle-r">
+                            <h2>vs</h2>
+                        </div>
+                        <div class="right-r">
+                            <img src="./assets/img/Group 27230.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
-
             <h2>previous 3 matches</h2>
 
-            <div class="row2">
+            <div class="row2 row-light">
                 <div class="one">
-                    <h2>l</h2>
+                    <h3>l</h3>
                 </div>
                 <div class="two">
                     <p>Ended - Feb 14, 18:43</p>
@@ -261,14 +286,14 @@
                     <p>0 - 2</p>
                 </div>
                 <div class="six">
-                    <h3>paperplane</h3>
+                    <p>paperplane</p>
                     <img src="./assets/img/Group 27232.png" alt="">
                 </div>
             </div>
 
-            <div class="row3">
+            <div class="row2 row3">
                 <div class="one">
-                    <h2>w</h2>
+                    <h3>w</h3>
                 </div>
                 <div class="two">
                     <p>Ended - Feb 13, 17:14</p>
@@ -288,12 +313,12 @@
                 </div>
             </div>
 
-            <div class="row3">
+            <div class="row2 row3 row4">
                 <div class="one">
-                    <h2>w</h2>
+                    <h3>w</h3>
                 </div>
                 <div class="two">
-                    <p>Ended - Feb 13, 13:14</p>
+                    <p>Ended - Feb 13, 13:51</p>
                 </div>
                 <div class="three">
                     <p>ShadowStrike Invitational</p>
@@ -305,12 +330,13 @@
                     <p>2 - 0</p>
                 </div>
                 <div class="six">
-                    <h3>cookies</h3>
+                    <p>cookies</p>
                     <img src="./assets/img/Group 27231.png" alt="">
                 </div>
             </div>
+            
         </div>
-    </section> -->
+    </section>
 
     <section class="rated">
         <div class="container">
