--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
         <div class="container">
             <div class="row">
                 <div class="left">
-                    <a href="#"><img src="./assets/img/Logo.png" alt=""></a>
+                    <a href="#home"><img src="./assets/img/Logo.png" alt=""></a>
                 </div>
                 <div class="middle">
                     <ul class="nav-list">
-                        <li class="nav-item"><a href="#" class="nav-link active">home</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">news</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">ourmission</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">matches</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">socials</a></li>
+                        <li class="nav-item"><a href="#home" class="nav-link active">home</a></li>
+                        <li class="nav-item"><a href="#news" class="nav-link">news</a></li>
+                        <li class="nav-item"><a href="#success" class="nav-link">ourmission</a></li>
+                        <li class="nav-item"><a href="#next" class="nav-link">matches</a></li>
+                        <li class="nav-item"><a href="#family" class="nav-link">socials</a></li>
                     </ul>
                 </div>
                 <div class="right">
-                    <a href="#">Shop</a>
+                    <a href="#shops" id="shops">Shop</a>
                 </div>
             </div>
         </div>
     </header>
 
-    <section class="home">
+    <section class="home" id="home">
         <div class="container-home">
             <h3>FASTER UI ESORTs</h3>
             <h1>Where <span>Winning</span> <br> is the Only Option</h1>
@@ -96,7 +96,7 @@
         </div>
     </section>
 
-    <section class="news">
+    <section class="news" id="news">
         <div class="container">
             <div class="heading">
                 <div class="sec-heading">
@@ -202,7 +202,7 @@
         </div>
     </section>
 
-    <section class="success">
+    <section class="success" id="success">
         <div class="container">
             <div class="row">
                 <div class="left">
@@ -238,14 +238,14 @@
 
                     </div>
                     <div class="bottom">
-                        <h2>our mission is to win, and only win. that's what we do.</h2>
+                        <h2>our mission is to <span> win</span>, and only <span> win</span>. that's what we do.</h2>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="next">
+    <section class="next" id="next">
         <div class="container">
             <div class="row">
                 <div class="left">
@@ -354,7 +354,7 @@
         </div>
     </section>
 
-    <section class="family">
+    <section class="family" id="family">
         <div class="container-sixteenk">
             <div class="row">
                 <div class="left">
@@ -439,12 +439,12 @@
 
         <div class="footer-links">
             <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">news</a></li>
-                <li><a href="#">ourmission</a></li>
-                <li><a href="#">matches</a></li>
-                <li><a href="#">social</a></li>
-                <li><a href="#">shops</a></li>
+                <li><a href="#home">home</a></li>
+                <li><a href="#news">news</a></li>
+                <li><a href="#success">ourmission</a></li>
+                <li><a href="#next">matches</a></li>
+                <li><a href="#family">social</a></li>
+                <li><a href="#shops">shops</a></li>
             </ul>
         </div>
 
@@ -452,7 +452,7 @@
             <svg width="21" height="19" viewBox="0 0 21 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M10.0342 18.1801C10.1576 18.3061 10.3256 18.3761 10.5015 18.3761C10.6774 18.3761 10.8454 18.3061 10.9688 18.1801L19.364 9.67369C22.8651 6.12711 20.3773 0 15.3983 0C12.4082 0 11.0362 2.19725 10.5015 2.60765C9.96422 2.1955 8.60089 0 5.60472 0C0.641424 0 -1.87697 6.11136 1.63986 9.67369L10.0342 18.1801Z" fill="#FF0000"/>
                 </svg>
-                <span>Made with love powered by <a href="#">inkyy.com</a></span>
+                <p>Made with love powered by <a href="#">inkyy.com</a></p>
         </div>
     </footer>
 
